<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.3.RELEASE</version>
    </parent>

    <groupId>de.qaware.openapi-generator-for-spring</groupId>
    <artifactId>openapi-generator-for-spring-parent</artifactId>
    <name>OpenAPI Generator for Spring (Boot)</name>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <lombok.version>1.18.12</lombok.version>
        <jsr305.version>3.0.2</jsr305.version>
        <swagger-annotations.version>2.1.4</swagger-annotations.version>
        <webjars.swaggerui.version>3.36.1</webjars.swaggerui.version>
        <classgraph.version>4.8.69</classgraph.version>
        <commons.io.version>2.7</commons.io.version>
    </properties>

    <modules>
        <module>openapi-generator-for-spring-common</module>
        <module>openapi-generator-for-spring-shaded</module>
        <module>openapi-generator-for-spring-web</module>
        <module>openapi-generator-for-spring-webmvc</module>
        <module>openapi-generator-for-spring-webflux</module>
        <module>openapi-generator-for-spring-autoconfigure</module>
        <module>openapi-generator-for-spring-model</module>
        <module>openapi-generator-for-spring-api</module>
        <module>openapi-generator-for-spring-ui</module>
        <module>openapi-generator-for-spring-starter</module>
        <module>openapi-generator-for-spring-test</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-model</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-shaded</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-web</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-autoconfigure</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-webmvc</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-webflux</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-ui</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.qaware.openapi-generator-for-spring</groupId>
                <artifactId>openapi-generator-for-spring-starter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>swagger-ui</artifactId>
                <version>${webjars.swaggerui.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>${classgraph.version}</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${jsr305.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
